<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/container_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txt_connection_uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_uid"
            android:singleLine="true"
            android:ems="10" />

        <EditText
            android:id="@+id/txt_connection_display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_display_name"
            android:singleLine="true"
            android:ems="10" />

        <Button
            android:id="@+id/btn_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_connection" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_presence"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:showDividers="middle"
        android:divider="?android:attr/dividerHorizontal">

        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_presence" />

            <Spinner
                android:id="@+id/spinner_presence"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_presence_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_presence_set" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/txt_presence_uid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_presence_uid"
                android:singleLine="true"
                android:ems="10"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_roster_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_roster_add"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_roster_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_roster_remove"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_presence_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_presence_check"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_presence_check_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_presence_check_all"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>

        <ListView
            android:id="@+id/list_presence"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/list_presence_empty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_presence_empty" />

    </LinearLayout>

</merge>
